# controllers/course.controllers.js
@@ -1,17 +1,31 @@
 const { PrismaClient } = require("@prisma/client");
 const prisma = new PrismaClient();
-const getPagination = require("../utils/getPaggination");
+const { getPagination } = require("../utils/getPaggination");
 const { formattedDate } = require("../utils/formattedDate");
 
 module.exports = {
   createCourse: async (req, res, next) => {
     try {
-      const { price, isPremium, categoryId, promotionId, averageRating, createdAt, updatedAt } = req.body;
+      const {
+        price,
+        isPremium,
+        categoryId,
+        promotionId,
+        averageRating,
+        createdAt,
+        updatedAt,
+      } = req.body;
 
-      if (isPremium !== undefined || averageRating !== undefined || createdAt !== undefined || updatedAt !== undefined) {
+      if (
+        isPremium !== undefined ||
+        averageRating !== undefined ||
+        createdAt !== undefined ||
+        updatedAt !== undefined
+      ) {
         return res.status(400).json({
           status: false,
-          message: "isPremium, averageRating, createdAt, or updateAt cannot be provided during course creation",
+          message:
+            "isPremium, averageRating, createdAt, or updateAt cannot be provided during course creation",
           data: null,
         });
       }
@@ -67,7 +81,8 @@ module.exports = {
     try {
       const { idCourse } = req.params;
 
-      const { price, isPremium, averageRating, createdAt, updatedAt } = req.body;
+      const { price, isPremium, averageRating, createdAt, updatedAt } =
+        req.body;
 
       const checkCourse = await prisma.course.findFirst({
         where: {
@@ -82,10 +97,16 @@ module.exports = {
         });
       }
 
-      if (isPremium !== undefined || averageRating !== undefined || createdAt !== undefined || updatedAt !== undefined) {
+      if (
+        isPremium !== undefined ||
+        averageRating !== undefined ||
+        createdAt !== undefined ||
+        updatedAt !== undefined
+      ) {
         return res.status(400).json({
           status: false,
-          message: "isPremium, averageRating, createdAt, or updateAt cannot be provided during course update",
+          message:
+            "isPremium, averageRating, createdAt, or updateAt cannot be provided during course update",
           data: null,
         });
       }
@@ -202,7 +223,14 @@ module.exports = {
   getMyCourse: async (req, res, next) => {
     try {
       const { id } = req.user;
-      const { search, filter, category, level, page = 1, limit = 10 } = req.query;
+      const {
+        search,
+        filter,
+        category,
+        level,
+        page = 1,
+        limit = 10,
+      } = req.query;
 
       const countEnrollCourse = await prisma.course.count({
         where: {
@@ -216,14 +244,22 @@ module.exports = {
         },
       });
 
-      const pagination = getPagination(req, countEnrollCourse, Number(page), Number(limit));
+      const pagination = getPagination(
+        req,
+        countEnrollCourse,
+        Number(page),
+        Number(limit)
+      );
 
       let coursesQuery = {
         where: {},
       };
 
       if (search) {
-        coursesQuery.where.OR = [{ courseName: { contains: search, mode: "insensitive" } }, { mentor: { contains: search, mode: "insensitive" } }];
+        coursesQuery.where.OR = [
+          { courseName: { contains: search, mode: "insensitive" } },
+          { mentor: { contains: search, mode: "insensitive" } },
+        ];
       }
 
       if (filter) {
@@ -240,7 +276,9 @@ module.exports = {
       }
 
       if (category) {
-        const categories = Array.isArray(category) ? category.map((c) => c.toLowerCase()) : [category.toLowerCase()];
+        const categories = Array.isArray(category)
+          ? category.map((c) => c.toLowerCase())
+          : [category.toLowerCase()];
         coursesQuery.where.category = {
           categoryName: { in: categories, mode: "insensitive" },
         };
@@ -283,9 +321,9 @@ module.exports = {
       });
 
       let course = await prisma.course.findMany({
+        skip: (Number(page) - 1) * Number(limit),
+        take: Number(limit),
         where: {
-          skip: (Number(page) - 1) * Number(limit),
-          take: Number(limit),
           enrollment: {
             some: {
               userId: {
@@ -421,14 +459,24 @@ module.exports = {
   },
   getCourse: async (req, res, next) => {
     try {
-      const { search, filter, category, level, page = 1, limit = 10 } = req.query;
+      const {
+        search,
+        filter,
+        category,
+        level,
+        page = 1,
+        limit = 10,
+      } = req.query;
 
       let coursesQuery = {
         where: {},
       };
 
       if (search) {
-        coursesQuery.where.OR = [{ courseName: { contains: search, mode: "insensitive" } }, { mentor: { contains: search, mode: "insensitive" } }];
+        coursesQuery.where.OR = [
+          { courseName: { contains: search, mode: "insensitive" } },
+          { mentor: { contains: search, mode: "insensitive" } },
+        ];
       }
 
       if (filter) {
@@ -451,7 +499,9 @@ module.exports = {
       }
 
       if (category) {
-        const categories = Array.isArray(category) ? category.map((c) => c.toLowerCase()) : [category.toLowerCase()];
+        const categories = Array.isArray(category)
+          ? category.map((c) => c.toLowerCase())
+          : [category.toLowerCase()];
         coursesQuery.where.category = {
           categoryName: { in: categories, mode: "insensitive" },
         };
@@ -500,7 +550,6 @@ module.exports = {
           },
           enrollment: {
             select: {
-              progres: true,
               review: {
                 select: {
                   userRating: true,
@@ -513,7 +562,9 @@ module.exports = {
         },
       });
 
-      const totalCourses = await prisma.course.count();
+      const totalCourses = await prisma.course.count({
+        where: coursesQuery.where,
+      });
       const pagination = getPagination(req, totalCourses, Number(page), Number(limit));
 
       courses = courses.map((val) => {
